# universal-data-catalog

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  conde_quality.yml  release.yml  test.yml
docs/: index.md
docs/code/: data_catalog.md  networkx.md  overview.md  pickle.md  transformer.md
docs/logic/: config_file.md  custom_provider.md  custom_transformer.md  example.md  install.md
test/: test_dataloader.py  test_networx_provider.py  test_pandas_provider.py  test_pickle_provider.py  test_transformer.py
test/_data/data_catalog/data/: catalog.yml
test/_data/data_catalog/extra/: custom_provider.py
test/_data/networkx/: catalog.yml  graph.gml
test/_data/pandas/: catalog.yml  titanic.xlsx
test/_data/pickle/: catalog.yml
test/_data/transformer/custom_transformer/: custom_transformer.py
test/_data/transformer/data/: catalog.yml
test/_data/transformer/extra/: custom_transformer.py
test/conf/: catalog.yml
universal_data_catalog/: constants.py  data_catalog.py  exceptions.py  types.py
universal_data_catalog/provider/: base_provider.py  networkx.py  numpy.py  pandas.py  pickle.py
universal_data_catalog/transformer/: base_transformer.py
universal_data_catalog/util/: load_provider.py
