[tool.poetry]
name = "universal_data_catalog"
version = "0.1.0"
description = ""
authors = ["An Hoang <anhoang31415@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
omegaconf = "^2.1.1"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
pandas  = { version = "^1.3.4", optional = true }
openpyxl = { version = "^3.0.9", optional = true }
networkx = { version = "^2.6.3", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
pandas = ["pandas", "openpyxl"]
networkx = ["networkx"]