[tool.poetry]
name = "universal_data_catalog"
version = "0.1.4"
description = "A abstraction layer for dataset IO that can be configured using yaml files."
authors = ["An Hoang <anhoang31415@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["yml", "data-science", "data-catalog"]
repository = "https://github.com/AnH0ang/universal-data-catalog"
homepage = "https://universal-data-catalog.readthedocs.io/en/latest/"
documentation = "https://universal-data-catalog.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
omegaconf = ">=2.1.1"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
pandas  = { version = ">=1.3.1", optional = true }
openpyxl = { version = ">=3.0.9", optional = true }
networkx = { version = ">=2.6.3", optional = true }

[tool.poetry.dev-dependencies]
isort = ""
flake8 = ""
flake8-docstrings = ""
black = ""
mypy = ""
pytest =  ""
mkdocs = ""
mkdocs-material = ""
mkdocstrings = ""
unimport = ""
pre-commit = ""
coverage = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
pandas = ["pandas", "openpyxl"]
networkx = ["networkx"]
all = ["pandas", "openpyxl", "networkx"]
